[gd_scene load_steps=17 format=2]

[ext_resource path="res://warped city files/ENVIRONMENT/background/skyline-a.png" type="Texture" id=1]
[ext_resource path="res://warped city files/demo/assets/environment/bg-2.png" type="Texture" id=2]
[ext_resource path="res://warped city files/ENVIRONMENT/background/skyline-b.png" type="Texture" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Absolute Xero.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[node name="main menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 512.0
margin_bottom = 242.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 2 )
text = "Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 256.0
margin_top = 392.0
margin_right = 768.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 24.0
focus_neighbour_top = NodePath("../QUIT")
theme = SubResource( 4 )
custom_fonts/font = SubResource( 11 )
text = "New Game"

[node name="LOAD" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 512.0
margin_bottom = 52.0
theme = SubResource( 6 )
text = "Load Game"

[node name="OPTIONS" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 512.0
margin_bottom = 80.0
theme = SubResource( 8 )
text = "Options"

[node name="QUIT" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 512.0
margin_bottom = 108.0
focus_neighbour_bottom = NodePath("../NewButton")
theme = SubResource( 10 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/NewButton" to="." method="_on_NEW_pressed"]
[connection signal="pressed" from="VBoxContainer/LOAD" to="." method="_on_LOAD_pressed"]
[connection signal="pressed" from="VBoxContainer/OPTIONS" to="." method="_on_OPTIONS_pressed"]
[connection signal="pressed" from="VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]
